--- a/README
+++ b/README
@@ -11,7 +11,7 @@ Methods:
 How to use:
 1.) Sign in to an application that you own with following extended permissions: user_checkins, friends_checkins, publish_checkins, offline_access
 2.) View your cookies to find your access_token and copy it into the ACCESS_TOKEN constant at the top of edit_then_run_me.rb
-3.) Uncomment the example that you wish to run and add any require parameters.
+3.) Uncomment the example that you wish to run, add any require parameters and run edit_then_run_me.rb
 
 All results are returned to the console in pretty JSON.
 
