--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+PLEASE NOTE:
+This was sample code made for a live demonstration, if you're looking for something to use in a production app then check out Koala:
+https://github.com/arsduo/koala
+
 Playing with the Facebook Places API in Ruby
 ============================================
 
